...
        android:src="@drawable/ic_switch_cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/switch_camera_button" />

    <Button
        android:id="@+id/camera_capture_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_take_photo"
        android:elevation="2dp"
        android:scaleType="fitCenter"
...
